@@ -82,13 +82,12 @@ CUPT_API string join(const string& joiner, const vector< string >& parts);
 CUPT_API string humanReadableSizeString(uint64_t bytes);
 /// @endcond
 
-// TODO/API break/: should return const char*
 /// localizes message
 /**
  * @param message input string
  * @return localized message
  */
-string CUPT_API __(const char* message);
+CUPT_API const char* __(const char* message);
 
 /// reads package name in range
 /**
