@@ -2,6 +2,7 @@ cupt (2.6.0~) UNRELEASED; urgency=low
 
   * lib:
     - Removed deprecated functions 'fatal', 'warn', 'debug', 'simulate'.
+    - [API break] '__': now returns 'const char*' instead of 'string'.
     - cache:
       - [API break] Pointers to Package and Version objects are now persistent
         and unique. Thus shared pointers to those objects are no more used in
